--- a/editor.html
+++ b/editor.html
@@ -38,19 +38,25 @@
         <div class="inner" id="controls" height="500px">
             <table>
                 <tr>
-                    <td>Setting 1</td>
+                    <td></td><td>Left Eye</td>
+                </tr>
+                <tr>
+                    <td>Eye</td>
                     <td id="slider1Container"></td>
                 </tr>
                 <tr>
-                    <td>Setting 2</td>
+                    <td>Pupil</td>
                     <td id="slider2Container"></td>
                 </tr>
                 <tr>
-                    <td>Setting 3</td>
+                    <td></td><td>Right Eye</td>
+                </tr>
+                <tr>
+                    <td>Eye</td>
                     <td id="slider3Container"></td>
                 </tr>
                 <tr>
-                    <td>Setting 4</td>
+                    <td>Pupil</td>
                     <td id="slider4Container"></td>
                 </tr>
                 <tr>
