First Iteration (Eyes)
Finally mapped the eyes to the face.

--- a/editor.html
+++ b/editor.html
@@ -60,7 +60,7 @@
                     <td id="slider4Container"></td>
                 </tr>
                 <tr>
-                    <td>Setting 5</td>
+                    <td>Eye distance</td>
                     <td id="slider5Container"></td>
                 </tr>
                 <tr>
